--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/icomoon-social.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/leaflet.css" />
     <!--[if lte IE 8]>
             <link rel="stylesheet" href="css/leaflet.ie.css" />
@@ -41,6 +42,9 @@
                     </li>
                     <li>
                         <a href="#careers">Careers</a>
+                    </li>
+                    <li>
+                        <a href="#about">About</a>
                     </li>
                 </ul>
             </nav>
@@ -211,11 +215,92 @@
             <p>Contact us today and we’ll help you find the solution that’s right for your business.</p>
         </div>
     </div>
-    <div class="section">
+    <div class="section" id='about'>
+        
         <div class="container">
             <h2>About Aptus Group</h2>
             <p>The Aptus Group delivers business and staffing services that reduces costs, enhances organizational flexibility, and improves performance. We work with you to quickly identify people with the right skills and competencies to meet your needs. Our experienced pool of professionals is fully vetted, and ready to hit the ground running—onsite or offsite—today.</p>
             <p>Contact us to find out how we can help your organization achieve more.</p>
+        </div>
+        <div class='container'>
+        <h3>Executive Leadership</h3>
+            <div class='row'>
+                <div class="col-md-4">
+                    <div class='team-box'>
+                        <div class='col-md-6'>
+                            <img src="http://bpcs.com/assets/img/kyle_pic.jpg" alt="Kyle Wagner" class="img-responsive img-circle" />
+                        </div>
+                        <h3>Kyle Wagner</h3>
+                        <h4>Chief Operating Officer<br>& Co-Founder</h4>
+                        <div class='text-content'>
+                            <p>Kyle Wagner is an authentic business and technology leader with more than 20 years of experience improving the way companies operate and engage with their customers and partners. With a background in IT operations, data analytics, customer support and software development, Kyle brings a unique and broad perspective to solving complex business challenges.</p>
+                        </div>
+                        <div class='links'>
+                            <ul>
+                                <li>
+                                    <a href="https://www.linkedin.com/profile/view?id=46737590&authType=NAME_SEARCH&authToken=wmSZ&locale=en_US&trk=tyah2&trkInfo=tarId%3A1409179132127%2Ctas%3Akyle%2Cidx%3A1-1-1"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/wags_kjw"><i class="fa fa-twitter fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a href="mailto:kyle@aptusgrp.com"><i class="fa fa-envelope fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class='team-box'>
+                        <div class='col-md-6'>
+                            <img src="http://bpcs.com/assets/img/danielle_pic.jpeg" alt="" class="img-responsive img-circle" />
+                        </div>
+                        <h3>Danielle Funston</h3>
+                        <h4>VP of Operations</h4>
+                        <div class='text-content'>
+                            <p>Danielle has several years of experience leading world-class service and support teams, with duties ranging from business development to employee management to marketing to reporting and process development. She has a proven record of successfully working closely with managers and executives to ensure that company goals are met.</p>
+                            
+                            <p>In her free time, Danielle enjoys cooking, interior design, and spending time with her family.</p>
+                        </div>
+                        <div class='links'>
+                            <ul>
+                                <li>
+                                    <a href="https://www.linkedin.com/profile/view?id=111799784&authType=NAME_SEARCH&authToken=9F5u&locale=en_US&trk=tyah2&trkInfo=tarId%3A1409177615865%2Ctas%3Adanielle%2Cidx%3A1-1-1"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a href="mailto:danielle@aptusgrp.com"><i class="fa fa-envelope fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class='team-box'>
+                        <div class='col-md-6'>
+                            <img src="http://bpcs.com/assets/img/ian_pic.jpg" alt="" class="img-responsive img-circle" />
+                        </div>
+                        <h3>Ian Hunt</h3>
+                        <h4>Managing Director</h4>
+                        <div class='text-content'>
+                            <p>Ian Hunt brings more than 20 years of experience as a customer support leader building global multi-tiered and multi-channel support solutions that optimize customer satisfaction. Ian has a background in Service Management, Customer Experience Design, Technical support, Contact Center Solutions, and Operations.</p>
+                                <p>In his free time, Ian likes to travel, follows the English Premier League and in quieter times appreciates fine wine and a good book!</p>
+
+                        </div>
+                        <div class='links'>
+                            <ul>
+                                <li>
+                                    <a href="https://www.linkedin.com/profile/view?id=219329295&authType=NAME_SEARCH&authToken=i8rr&locale=en_US&srchid=2204932711409177398002&srchindex=1&srchtotal=257&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2204932711409177398002%2CVSRPtargetId%3A219329295%2CVSRPcmpt%3Aprimary"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a href="mailto:ian@aptusgrp.com"><i class="fa fa-envelope fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Footer -->
@@ -242,10 +327,10 @@
             </div>
         </div>
     </div>
-    <!-- Javascripts -->
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
-    window.jQuery || document.write('<script src="js/jquery-1.9.1.min.js"><\/script>')
+        window.jQuery || document.write('<script src="js/jquery-1.9.1.min.js"><\/script>')
     </script>
     <script src="js/bootstrap.min.js"></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
