--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -231,7 +231,7 @@
                             <img src="http://bpcs.com/assets/img/kyle_pic.jpg" alt="Kyle Wagner" class="img-responsive img-circle" />
                         </div>
                         <h3>Kyle Wagner</h3>
-                        <h4>Chief Operating Officer<br>& Co-Founder</h4>
+                        <h4>CEO<br>& Co-Founder</h4>
                         <div class='text-content'>
                             <p>Kyle Wagner is an authentic business and technology leader with more than 20 years of experience improving the way companies operate and engage with their customers and partners. With a background in IT operations, data analytics, customer support and software development, Kyle brings a unique and broad perspective to solving complex business challenges.</p>
                         </div>
@@ -282,7 +282,7 @@
                             <img src="http://bpcs.com/assets/img/ian_pic.jpg" alt="" class="img-responsive img-circle" />
                         </div>
                         <h3>Ian Hunt</h3>
-                        <h4>Managing Director</h4>
+                        <h4>President & Co-Founder</h4>
                         <div class='text-content'>
                             <p>Ian Hunt brings more than 20 years of experience as a customer support leader building global multi-tiered and multi-channel support solutions that optimize customer satisfaction. Ian has a background in Service Management, Customer Experience Design, Technical support, Contact Center Solutions, and Operations.</p>
                                 <p>In his free time, Ian likes to travel, follows the English Premier League and in quieter times appreciates fine wine and a good book!</p>
