--- a/bpcs-v5/index.html
+++ b/bpcs-v5/index.html
@@ -55,7 +55,7 @@
                 <div class="col-md-10 col-md-offset-1 text-center">
                     <div class='hero-box'>
                         <h1>Tri-Tard</h1>
-                        <h2>Superior Execution, Every Time</h2>
+                        <h2>Mediocre Execution, Some Of The Time</h2>
                     </div>
                     <p class="p-cls"></p>
                     <div class="row text-center">
