added careers page

--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -39,6 +39,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="solutions.html">SOLUTIONS</a></li>
                     <li><a href="team.html">TEAM</a></li>
+                    <li><a href="careers.html">CAREERS</a></li>
                     <li><a href="connect.html">CONNECT</a></li>
                 </ul>
             </div>
@@ -266,64 +267,12 @@
             </video>
         </div>
     </section>
-    <!-- CLIENTS SECTION END-->
-    <section id='careers' class='container-alt-gray'>
-        <div class="container">
-
-            <div class="row">
-                <div class='col-md-5'>
-                    <h2>FEATURED CAREERS <a href='https://boards.greenhouse.io/bpcs' target="_blank"><small>View All</small></a></h2>
-                </div>
-                <div class='col-md-7'>
-                    <div class='share-link pull-right text-left'>
-                        <div class='col-md-1'><i class="fa fa-share-alt fa-2x show-link"></i></div>
-                        <div class='col-md-8 share-url'>
-                            <samp>http://www.bpcs.com/solutions.html#careers</samp>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row" id='jobListings'>
-                <div class="col-md-4">
-                    <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-comments  fa-4x"></i></div>
-                        <div class='col-md-8'>
-                            <h4>Messaging Engineer</h4>
-                            <p>Texas</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1100/messaging-engineer---texas/job'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-users  fa-4x"></i></div>
-                        <div class='col-md-8'>
-                            <h4>UX Designer</h4>
-                            <p>Bellevue, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1139/customer-relationship-manager/job'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-globe  fa-4x"></i></div>
-                        <div class='col-md-8'>
-                            <h4>Data Warehouse Engineer</h4>
-                            <p>North Carolina</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1116/migration-manager---north-carolina/job'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <section id="callToAction" class='container-alt-accent'>
+  <section id="callToAction" class='container-alt-accent'>
         <div class="container">
             <div class="row text-center">
                 <div class='col-md-6 col-md-offset-3'>
-                    <h1>Ready to get started?</h1>
-                    <button onClick="location.href='connect.html'" class="btn btn-primary btn-block btn-callToAction">Connect with us</button>
+                    <h1>Ready for the next big thing?</h1>
+                    <button onClick="location.href='careers.html'" class="btn btn-primary btn-block btn-callToAction">Check out our careers</button>
                 </div>
             </div>
         </div>
@@ -336,6 +285,7 @@
                     <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
                     <li><i class="fa fa-pied-piper fa-fw"></i><a href="solutions.html">Solutions</a></li>
                     <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
+                    <li><i class="fa fa-suitcase fa-fw"></i><a href="careers.html">Careers</a></li>
                     <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
                 </ul>
             </div>
