--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -39,6 +39,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="solutions.html">SOLUTIONS</a></li>
                     <li><a href="team.html">TEAM</a></li>
+                    <li><a href="careers.html">CAREERS</a></li>
                     <li><a href="connect.html">CONNECT</a></li>
                 </ul>
             </div>
@@ -290,6 +291,7 @@
                     <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
                     <li><i class="fa fa-pied-piper fa-fw"></i><a href="solutions.html">Solutions</a></li>
                     <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
+                    <li><i class="fa fa-suitcase fa-fw"></i><a href="careers.html">Careers</a></li>
                     <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
                 </ul>
             </div>
