--- a/bpcs-crusade-onepage/index.html
+++ b/bpcs-crusade-onepage/index.html
@@ -104,7 +104,7 @@
           <hr class="section-heading-spacer">
           <div class="clearfix"></div>
           <h2 class="section-heading">Tailored For Business Impact</h2>
-          <p class="lead">Why settle for a 'one-size-fits-all' dashboard? Dashboards should be as unique as your business. Crusade provides a platform upon which customized components can be created and added easily. With strategic planning and analysis provided by Blueprint's
+          <p class="lead">Why settle for a dashboard that isn't as unique as your business? Crusade provides a platform upon which customized metric components can be created and added easily. With strategic planning and analysis provided by Blueprint's
             world-class consulting services, Crusade is the dashboard your company needs for real data-driven actions</p>
         </div>
         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
