--- a/bpcs-crusade-onepage/index.html
+++ b/bpcs-crusade-onepage/index.html
@@ -104,8 +104,8 @@
           <hr class="section-heading-spacer">
           <div class="clearfix"></div>
           <h2 class="section-heading">Tailored For Business Impact</h2>
-          <p class="lead">Why settle for a dashboard that isn't as unique as your business? Crusade provides a platform upon which customized metric components can be created and added easily. With strategic planning and analysis provided by Blueprint's
-            world-class consulting services, Crusade is the dashboard your company needs for real data-driven actions</p>
+          <p class="lead">Why settle for a dashboard that isn't as unique as your business? Crusade provides a platform upon which customized metric components can be created and added easily. With strategic planning and analysis provided by Blueprint's world-class consulting
+            services, Crusade is the dashboard your company needs for real data-driven actions</p>
         </div>
         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
           <img class="img-responsive" src="img/dog.png" alt="">
@@ -151,17 +151,14 @@
           <h2>Get a demo today!</h2>
         </div>
         <div class="col-lg-6">
-
-          <form class="form-inline">
+          <h3 style="text-shadow: 2px 2px 3px rgba(0,0,0,0.6);">Learn how Crusade can give you real insight.</h3>
+          <form class="form-inline" action="https://tinyletter.com/bpcs-crusade" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/bpcs-crusade', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
             <div class="form-group">
-              <label class="sr-only" for="formName">Name</label>
-              <input type="text" class="form-control" id="formName" placeholder="Your name">
+              <label class="sr-only" for="tlemail">Enter your email address</label>
+              <input class="form-control" placeholder="Your email address" type="text" name="email" id="tlemail" />
             </div>
-            <div class="form-group">
-              <label class="sr-only" for="formEmail">Email</label>
-              <input type="email" class="form-control" id="formEmail" placeholder="Your email address">
-            </div>
-            <button type="submit" class="btn btn-default">Tell Me More</button>
+            <input type="hidden" value="1" name="embed" />
+            <input class="btn btn-default" type="submit" value="Tell Me More" />
           </form>
         </div>
       </div>
