--- a/radar/landing-page/index.html
+++ b/radar/landing-page/index.html
@@ -59,9 +59,9 @@
   <header>
     <div class="header-content">
       <div class="header-content-inner">
-        <h1>We make project status reports useful.</h1>
+        <h1>We make status</br>reports useful.</h1>
         <hr>
-        <p>Radar eliminates long-winded emails, complicated spreadsheets and user-hostile project management software. Get the insight you want, from the people that know, at the time you need it.</p>
+        <p>Radar eliminates long-winded emails, complicated spreadsheets and status update meetings. Get the insight you want, from the people that know, at the time you need it.</p>
         <a href="#" class="btn btn-primary btn-xl plans">Plans & Pricing</a>
       </div>
     </div>
