--- a/radar/landing-page/stakeholders.html
+++ b/radar/landing-page/stakeholders.html
@@ -34,14 +34,14 @@
   <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand page-scroll" href="#page-top">Radar</a>
+        <a class="navbar-brand page-scroll" href="index.html">Radar</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
 
           <li>
-            <a href="#how" class="page-scroll action-how-it-works">How It Works</a>
+            <a href="#how" class="page-scroll action-how-it-works">Why Radar?</a>
           </li>
 
           <li>
@@ -56,14 +56,12 @@
     </div>
   </nav>
 
-  <header>
+  <header class='header3'>
     <div class="header-content">
       <div class="header-content-inner">
-        <h1>We make status</br>reports useful.</h1>
+        <h1>Do you know your project's health?</h1>
         <hr>
-        <p>Radar eliminates long-winded emails, complicated spreadsheets and status update meetings. Get the insight you want, from the people that know, at the time you need it.
-        </br>
-        It's for project <a class='action-for-stakeholders' href='stakeholders.html'>stakeholders</a> and <a href='projectmanagers.html' class='action-for-project-managers'>project managers</a>.
+        <p>Radar gives you instant insight into the financial and deliverable status of your project.
         </p>
         <a href="#" class="btn btn-primary btn-xl plans">Plans & Pricing</a>
       </div>
@@ -74,7 +72,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">How Radar Works</h2>
+          <h2 class="section-heading">Why Radar?</h2>
           <hr class="primary">
         </div>
       </div>
@@ -84,22 +82,22 @@
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box">
             <i class="fa fa-4x fa-cloud-download wow bounceIn text-primary"></i>
-            <h3>Project activity is collected</h3>
-            <p class="text-muted">Radar pulls all relevant data from the tools a project team uses today.</p>
+            <h3>No need to learn new tools</h3>
+            <p class="text-muted">Radar pulls all relevant data from the tools your team uses today, so you don't have to.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box">
             <i class="fa fa-4x fa-user wow bounceIn text-primary" data-wow-delay=".1s"></i>
-            <h3>PM input is gathered</h3>
+            <h3>Your PM can focus</h3>
             <p class="text-muted">Radar interacts with the project manager automatically to get the details that only a human can provide.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box">
             <i class="fa fa-4x fa-heartbeat wow bounceIn text-primary" data-wow-delay=".2s"></i>
-            <h3>Project health is determined</h3>
-            <p class="text-muted">Radar provides actionable insight into the current status of a project.</p>
+            <h3>Your empowered to take action</h3>
+            <p class="text-muted">Radar provides actionable insight into the current status of your project.</p>
           </div>
         </div>
 
