--- a/radar/landing-page/projectmanagers.html
+++ b/radar/landing-page/projectmanagers.html
@@ -121,7 +121,7 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading">Have Questions? Contact Us Today!</h2>
           <hr class="primary">
-          <p>Radar is a product from <a href='http://www.bpcs.com'>Blueprint Consulting</a>, an award winning strategic consulting company headquartered in Bellevue, Washington.</p>
+          <p>Radar is a product from <a href='http://www.bpcs.com'>Blueprint Consulting Services</a>, an award winning strategic consulting company headquartered in Bellevue, Washington.</p>
         </div>
         <div class="col-lg-4 col-lg-offset-2 text-center">
           <i class="fa fa-phone fa-3x wow bounceIn"></i>
