--- a/radar/landing-page/stakeholders.html
+++ b/radar/landing-page/stakeholders.html
@@ -96,7 +96,7 @@
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box">
             <i class="fa fa-4x fa-heartbeat wow bounceIn text-primary" data-wow-delay=".2s"></i>
-            <h3>Your empowered to take action</h3>
+            <h3>You're empowered to take action</h3>
             <p class="text-muted">Radar provides actionable insight into the current status of your project.</p>
           </div>
         </div>
@@ -121,7 +121,7 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading">Have Questions? Contact Us Today!</h2>
           <hr class="primary">
-          <p>Radar is a product from <a href='http://www.bpcs.com'>Blueprint Consulting</a>, an award winning strategic consulting company headquartered in Bellevue, Washington.</p>
+          <p>Radar is a product from <a href='http://www.bpcs.com'>Blueprint Consulting Services</a>, an award winning strategic consulting company headquartered in Bellevue, Washington.</p>
         </div>
         <div class="col-lg-4 col-lg-offset-2 text-center">
           <i class="fa fa-phone fa-3x wow bounceIn"></i>
