--- a/portfolio/v2/index.html
+++ b/portfolio/v2/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Thinker, creator and leader. Full stack developer, UI/UX designer">
+  <meta name="author" content="Gary Nakanelua">
 
   <title>Gary Nakanelua</title>
 
@@ -83,13 +83,10 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="about.html">The Designer</a>
+            <a href="#design">The Designer</a>
           </li>
           <li>
-            <a href="post.html">The Developer</a>
-          </li>
-          <li>
-            <a href="post.html">The Leader</a>
+            <a href="#develop">The Developer</a>
           </li>
         </ul>
       </div>
@@ -107,7 +104,7 @@
           <div class="site-heading">
             <h1>Hello.</h1>
             <hr class="small">
-            <span class="subheading">My name is Gary Nakanelua.</br>I am a creator that designs and develops.</br>This is my portfolio.</span>
+            <span class="subheading">My name is Gary Nakanelua.</br>I am a creator that designs and develops products.</br>This is my portfolio.</span>
           </div>
         </div>
       </div>
@@ -115,7 +112,7 @@
   </header>
 
   <!-- Design -->
-  <section class='bg-gray'>
+  <section class='bg-gray' id='design'>
     <div class="container">
       <div class="row">
         <h1>The Designer</h2>
@@ -149,16 +146,19 @@
   </section>
   <!-- /Design -->
 
-  <section>
+  <!-- Develop -->
+  <section id='develop'>
       <div class="container">
         <div class="row">
           <h1>The Developer</h2>
             <p>
-              I've been the solution architect and principal developer for a variety of projects. I've had the pleasure to work as a full time employee, consultant and freelancer for some of the best companies in the world.
-              <img src="img/companies.png" class="img-responsive center-block" alt='Blueprint Consulting, Microsoft, Lockheed Martin, USA Today/Gannett'/>
+              I've been the solution architect and principal developer for a large number of products. I've had the pleasure to create products for a variety of companies including <a href='http://bpcs.com/' target="_blank">Blueprint Consulting Services</a>, <a href="https://www.microsoft.com/en-us/" target="_blank">Microsoft</a>, <a href='http://www.lockheedmartin.com/' target="_blank">Lockheed Martin</a> and <a href='http://www.gannett.com/' target="_blank">USA Today/Gannett</a>.
             </p>
             <p>
-              Here are a few of my latest projects...
+              I am an advocate for microservice architecture vs monolithic systems. I love pragmatic REST API design that empowers developers rather than dogma-driven API design that favors strict architecture adherance.
+            </p>
+            <p>
+              Here are a few of the products I've developed...
             </p>
         </div>
 
@@ -195,6 +195,7 @@
         <hr>
         </div>
     </section>
+  <!-- /Develop -->
 
   <section>
     <div class="container">
