--- a/radar/landing-page/stakeholders.html
+++ b/radar/landing-page/stakeholders.html
@@ -41,15 +41,15 @@
         <ul class="nav navbar-nav navbar-right">
 
           <li>
-            <a href="#how" class="page-scroll action-how-it-works">Why Radar?</a>
+            <a href="#how" data-action="goto-how-it-works-from-stakeholders-header-nav" class="page-scroll mixpanel">Why Radar?</a>
           </li>
 
           <li>
-            <a href="#contact" class="page-scroll">Contact</a>
+            <a href="#contact" data-action="goto-contact-from-stakeholders-header-nav" class="page-scroll mixpanel">Contact</a>
           </li>
 
           <li>
-            <a href="#" class="btn plans btn-primary btn-xl">Plans & Pricing</a>
+            <a href="plans.html" data-action="goto-plans-from-stakeholders-header-nav" class="btn mixpanel btn-primary btn-xl">Plans & Pricing</a>
           </li>
         </ul>
       </div>
@@ -63,10 +63,22 @@
         <hr>
         <p>Radar gives you instant insight into the financial and deliverable status of your project.
         </p>
-        <a href="#" class="btn btn-primary btn-xl plans">Plans & Pricing</a>
+        <a href="plans.html" data-action="goto-plans-from-stakeholders-hero" class="btn btn-primary btn-xl mixpanel">Plans & Pricing</a>
       </div>
     </div>
   </header>
+
+  <section id='devices'>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Available Everywhere You Are</h2>
+        <hr class="primary">
+        <img class='img-responsive' src='img/devices.png' />
+      </div>
+      </div>
+    </div>
+  </section>
 
   <section id="how">
     <div class="container">
