--- a/radar/landing-page/stakeholders.html
+++ b/radar/landing-page/stakeholders.html
@@ -74,7 +74,7 @@
         <div class="col-lg-12 text-center">
         <h2 class="section-heading">Available Everywhere You Are</h2>
         <hr class="primary">
-        <img class='img-responsive' src='img/devices.png' />
+        <img class='img-responsive' src='./img/Devices.png' />
       </div>
       </div>
     </div>
