--- a/radar/landing-page/projectmanagers.html
+++ b/radar/landing-page/projectmanagers.html
@@ -122,7 +122,7 @@
     <div class="container text-center">
       <div class="call-to-action">
         <h2>Check out the plans and pricing</h2>
-        <a href="#" class="btn btn-default btn-xl wow tada plans">Plans & Pricing</a>
+        <a href="plans.html" data-action="goto-plans-from-projectmanagers-aside" class="btn btn-default btn-xl wow tada mixpanel">Plans & Pricing</a>
       </div>
     </div>
   </aside>
