--- a/radar/landing-page/index.html
+++ b/radar/landing-page/index.html
@@ -169,7 +169,7 @@
     <div class="container text-center">
       <div class="call-to-action">
         <h2>Check out the plans and pricing</h2>
-        <a href="#" data-action="goto-plans-from-index-aside" class="btn btn-default btn-xl wow tada mixpanel">Plans & Pricing</a>
+        <a href="plans.html" data-action="goto-plans-from-index-aside" class="btn btn-default btn-xl wow tada mixpanel">Plans & Pricing</a>
       </div>
     </div>
   </aside>
