--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -156,7 +156,7 @@
             <h3>2<span class="smallcaps">Project Managers</span></h3>
             <h3>9<span class="smallcaps">Stakeholders</span></h3>
             <div class='col-md-10 col-md-offset-2 text-left text-info'>
-              <h3>Standard includes<span class='features'>Everything in <b>Basic</b>, and:</span></h3>
+              <h3>Plus includes<span class='features'>Everything in <b>Basic</b>, and:</span></h3>
               <ul class='text-info'>
                 <li>
                   <span>One-touch stakeholder responses</span>
@@ -177,12 +177,12 @@
           <div class="service-box">
             <i class="fa fa-4x fa-users wow bounceIn text-success" data-wow-delay=".2s"></i>
             <h2>Enterprise</h2>
-            <p class="text-muted">All you will ever need</p>
+            <p class="text-muted">Many projects, various sizes</p>
             <h3>Unlimited<span class="smallcaps">Active Projects</span></h3>
             <h3>10<span class="smallcaps">Project Managers</span></h3>
             <h3>Unlimited<span class="smallcaps">Stakeholders</span></h3>
             <div class='col-md-10 col-md-offset-2 text-left text-success'>
-              <h3>Enterprise includes<span class='features'>Everything in <b>Standard</b>, and:</span></h3>
+              <h3>Enterprise includes<span class='features'>Everything in <b>Plus</b>, and:</span></h3>
               <ul>
                 <li>
                   <span>Stakeholder usage analytics</span>
