--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -79,14 +79,14 @@
   <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand page-scroll" href="index.html">Radar</a>
+        <a class="navbar-brand" href="index.html">Radar</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
 
           <li>
-            <a href="#how" data-action="goto-how-it-works-from-index-header-nav" class="page-scroll mixpanel">How It Works</a>
+            <a href="index.html#how" data-action="goto-how-it-works-from-index-header-nav" class="mixpanel">How It Works</a>
           </li>
 
           <li>
