--- a/radar/landing-page/index.html
+++ b/radar/landing-page/index.html
@@ -106,9 +106,9 @@
       <div class="header-content-inner">
         <h1>We make status</br>reports useful.</h1>
         <hr>
-        <p>Radar eliminates long-winded emails, complicated spreadsheets and status update meetings. Get the insight you want, from the people that know, at the time you need it.
+        <p>Radar eliminates long-winded emails, complicated spreadsheets and status meetings. Get the insight you want, from the people that know, at the time you need it.
           </br>
-          It's for project <a class='mixpanel' href='stakeholders.html' data-action="goto-stakeholders-from-index-header-hero">stakeholders</a> and <a href='projectmanagers.html' class='mixpanel' data-action="goto-projectmanagers-from-index-header-hero">project managers</a>.
+          Radar is for <a class='mixpanel' href='stakeholders.html' data-action="goto-stakeholders-from-index-header-hero">project stakeholders</a> and <a href='projectmanagers.html' class='mixpanel' data-action="goto-projectmanagers-from-index-header-hero">project managers</a>.
         </p>
         <a href="plans.html" data-action="goto-plans-from-index-hero" class="btn btn-primary btn-xl mixpanel">Plans & Pricing</a>
       </div>
