--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -103,7 +103,7 @@
         <h1>Plans & Pricing</h1>
         <hr>
         <p>
-          Low cost plans for everyone in every environment.
+          Low cost subscription plans for everyone in every environment. 
         </p>
       </div>
     </div>
