--- a/radar/landing-page/stakeholders.html
+++ b/radar/landing-page/stakeholders.html
@@ -102,7 +102,7 @@
           <div class="service-box">
             <i class="fa fa-4x fa-user wow bounceIn text-primary" data-wow-delay=".1s"></i>
             <h3>Your PM can focus</h3>
-            <p class="text-muted">Radar interacts with the project manager automatically to get the details that only a human can provide.</p>
+            <p class="text-muted">Radar interacts with the project manager to get the details that only a human can provide.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
