--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -103,7 +103,7 @@
         <h1>Plans & Pricing</h1>
         <hr>
         <p>
-          Low cost subscription plans for everyone in every environment. 
+          Low cost subscription plans for everyone in every environment.
         </p>
       </div>
     </div>
@@ -125,6 +125,7 @@
             <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
             <h2>Basic</h2>
             <p class="text-muted">A small project with a few stakeholders</p>
+            <a href="#" data-action="start-free-basic-trial" class="btn mixpanel btn-primary btn-xl" style='margin-top:10px;'>Start Free Trial</a>
             <h3>1<span class="smallcaps">Active Project</span></h3>
             <h3>1<span class="smallcaps">Project Manager</span></h3>
             <h3>3<span class="smallcaps">Stakeholders</span></h3>
@@ -144,7 +145,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" data-action="start-free-basic-trial" class="btn mixpanel btn-primary btn-xl">Start Free Trial</a>
+
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -152,6 +153,7 @@
             <i class="fa fa-4x fa-user-plus wow bounceIn text-info" data-wow-delay=".1s"></i>
             <h2>Plus</h2>
             <p class="text-muted">A few small or medium sized projects</p>
+            <a href="#" data-action="start-free-standard-trial" class="btn mixpanel btn-info btn-xl" style='margin-top:10px;'>Start Free Trial</a>
             <h3>3<span class="smallcaps">Active Projects</span></h3>
             <h3>2<span class="smallcaps">Project Managers</span></h3>
             <h3>9<span class="smallcaps">Stakeholders</span></h3>
@@ -170,7 +172,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" data-action="start-free-standard-trial" class="btn mixpanel btn-info btn-xl">Start Free Trial</a>
+
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -178,6 +180,7 @@
             <i class="fa fa-4x fa-users wow bounceIn text-success" data-wow-delay=".2s"></i>
             <h2>Enterprise</h2>
             <p class="text-muted">Many projects, various sizes</p>
+            <a href="#" data-action="start-free-corporate-trial" class="btn mixpanel btn-success btn-xl" style='margin-top:10px;'>Start Free Trial</a>
             <h3>Unlimited<span class="smallcaps">Active Projects</span></h3>
             <h3>10<span class="smallcaps">Project Managers</span></h3>
             <h3>Unlimited<span class="smallcaps">Stakeholders</span></h3>
@@ -195,8 +198,6 @@
                 </li>
               </ul>
             </div>
-
-            <a href="#" data-action="start-free-corporate-trial" class="btn mixpanel btn-success btn-xl">Start Free Trial</a>
           </div>
         </div>
 
